Revert fix for overlapping TOC since it broke text blocks in general.

--- a/_sass/base/_common.scss
+++ b/_sass/base/_common.scss
@@ -102,10 +102,3 @@ th {
 .ui-widget-content a:hover, a:focus {
   color: $linkHoverColor !important;
 }
-
-#content-container{
-  /* overrides overflow:visible, which overlays on top of floating elements, i.e. the toc on /docs/reference/commands/istioctl.html */
-  code[class*="language-"], pre[class*="language-"]{
-    overflow:scroll;
-  }
-}
